tests/ui/item.stderr
error: #[tag] at an invalid position
 --> $DIR/item.rs:7:5
  |
7 |     #[tag = 1]
  |     ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/item.rs:13:5
   |
13 |     #[optional]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:19:5
   |
19 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:23:5
   |
23 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/item.rs:31:5
   |
31 |     #[tag = 1]
   |     ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/item.rs:37:5
   |
37 |     #[optional]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:43:5
   |
43 |     #[untagged]
   |     ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/item.rs:47:5
   |
47 |     #[untagged]
   |     ^^^^^^^^^^^
